# ELK_Stack_Isolator_Pattern_Pipeline

./: ELASTICSEARCH_API.md  README.md  TemplateIndex.json  VSPHEREMODULE.md  docker-compose.yml
Documentation/ELK_Stack/: ELK_Stack_Isolator_Pattern_Diagram.xml  ELK_Stack_Isolator_Pattern_Scripts_Diagram.xml
Documentation/Persistant_Redis/: PersistantRedisScriptsSequenceDiagram.xml
auditbeat/config/: auditbeat.yml
cliTools/.ancienvscode/: settings.json
cliTools/avdcli_redis_tools/: LICENSE  README.md  pyproject.toml  testLogFile
cliTools/avdcli_redis_tools/avd_redis_tools/: __init__.py  janitor.py  publisher.py
cliTools/avdcli_redis_tools/tests/: test_suite_janitor.py  test_suite_publisher.py
elasticsearchProduction/config/: elasticsearch.keystore
filebeat/config/: .bash_history  filebeat.yml
logstashDevelopment/config/: logstash.yml
logstashDevelopment/pipeline/: logstash.conf
logstashProduction/config/: logstash.yml
logstashProduction/pipeline/: logstash.conf
metricbeat/config/metricbeat/: .bash_history  README.md  fields.yml  metricbeat.reference.yml  metricbeat.yml
metricbeat/config/metricbeat/data/: meta.json
metricbeat/config/metricbeat/kibana/5/index-pattern/: metricbeat.json
metricbeat/config/metricbeat/kibana/6/index-pattern/: metricbeat.json
metricbeat/config/metricbeat/logs/: metricbeat  metricbeat.1  metricbeat.2  metricbeat.3  metricbeat.4  metricbeat.5  metricbeat.6  metricbeat.7
packetbeat/config/: packetbeat.yml
proxy/config/: logstash.yml  pipelines.yml
proxy/pipeline/: development.conf  intake.conf  production.conf
(+3 files in other folders)
